# cmake_learn

./: .gitignore  CMakeLists.txt
cmake/: FindSDL2_image.cmake  FindSDL2_ttf.cmake  Findfruit.cmake  Findgtest.cmake
examples/hello_world/: CMakeLists.txt  hello_world.cc
resources/: CMakeLists.txt
src/game/: CMakeLists.txt  cat_game_logic.cc  cat_game_logic.h  frame_counter.cc  frame_counter.h  game.cc  game_logic.h  main.cc  sdl_application.cc  sdl_application.h
src/game/engine/: CMakeLists.txt  engine.cc  engine.h  frame_counter.cc  frame_counter.h  game_logic.h  sdl_application.cc  sdl_application.h  sdl_engine.cc  sdl_engine.h
src/game/engine/sdl_impl/: CMakeLists.txt  create_sdl_engine.cc  create_sdl_engine.h  sdl_engine.cc  sdl_engine.h
src/game/scenes/cat_scene/: CMakeLists.txt  cat_game_logic.cc  cat_game_logic.h
src/game/scenes/space_game/: CMakeLists.txt  space_game_logic.cc  space_game_logic.h
src/playground/: CMakeLists.txt  message.cc  message.h
src/tests/: CMakeLists.txt  math_test.cc
